Playback in "Active Editor Only" doesn't work #55996

Closed
opened 2018-07-16 18:38:21 +02:00 by Hjalti Hjálmarsson · 8 comments

System Information
Windows 10 / Intel HD Graphics 630

Blender Version
6f8a141

Short description of error
Using the "Active Editor Only" should only give you playback in the viewport in which you have your cursor hovering over, this doesn't seem to work.

Exact steps for others to reproduce the error
New file
Split the 3d viewport into two parts
Animate the cube moving a bit over some frames
Go to the Timeline and open the Playback menu
Check "Active Editor Only"
Uncheck "All 3d Vew Editors"
Uncheck "Animation Editors"
Hover the cursor over one of the 3d viewports and hit play (SHIFT+Spacebar)
...it plays both 3d viewports instead of only the one you're hovering over...

**System Information** Windows 10 / Intel HD Graphics 630 **Blender Version** 6f8a141 **Short description of error** Using the "Active Editor Only" should only give you playback in the viewport in which you have your cursor hovering over, this doesn't seem to work. **Exact steps for others to reproduce the error** New file Split the 3d viewport into two parts Animate the cube moving a bit over some frames Go to the Timeline and open the Playback menu Check "Active Editor Only" Uncheck "All 3d Vew Editors" Uncheck "Animation Editors" Hover the cursor over one of the 3d viewports and hit play (SHIFT+Spacebar) ...it plays both 3d viewports instead of only the one you're hovering over...
Author
Member

Added subscriber: @Hjalti

Added subscriber: @Hjalti

#55724 was marked as duplicate of this issue

#55724 was marked as duplicate of this issue

Added subscribers: @Sergey, @JoshuaLeung, @mont29

Added subscribers: @Sergey, @JoshuaLeung, @mont29
Joshua Leung was assigned by Bastien Montagne 2018-07-26 10:09:04 +02:00

Confirmed. @JoshuaLeung, @Sergey, not sure whether this is supposed to be working currently? Or does it depend on multi-depsgraph work?

Confirmed. @JoshuaLeung, @Sergey, not sure whether this is supposed to be working currently? Or does it depend on multi-depsgraph work?
Joshua Leung was unassigned by Sergey Sharybin 2018-07-26 10:22:21 +02:00
Clément Foucault was assigned by Sergey Sharybin 2018-07-26 10:22:21 +02:00

This is nothing to do with neither dependency graph nor animation system. The issue is caused by TAA. Setting viewport quality to 0 in User Preferences -> System works this issue around.

This is nothing to do with neither dependency graph nor animation system. The issue is caused by TAA. Setting viewport quality to 0 in User Preferences -> System works this issue around.

Added subscriber: @fclem

Added subscriber: @fclem

This issue was referenced by 6d6deeb700

This issue was referenced by 6d6deeb70086564418368a5213cd9d28cdfa51e2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
5 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#55996
No description provided.