Workbench: Use FXAA instead of TAA when viewport is animated.

Fix T55996 "Playback in "Active Editor Only" doesn't work"